# contactsapp

./: .Dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  gunicorn_config.py  pyproject.toml  requirements.txt  run.sh
data/: contactos.sql  contacts.sql
nginx/: default.conf  nginx.conf
routes/: contacts.py
static/css/: main.css
static/js/: main.js
templates/: edit.html  index.html  layout.html
utils/: data.py
